--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>GravShower</title>
+        <title>Hello World</title>
     </head>
     <body>
         <div class="app">
@@ -38,5 +38,10 @@
                 document.write("<IMG class=\"picture\" src=\"https://de.gravatar.com/userimage/83468112/3f30505c337c9dc4567e0ebad3edff59.jpg?size=" + minWH + "\" alt=\"Logo\">");
             </script>
         </div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript">
+            app.initialize();
+        </script>
     </body>
 </html>
