try with text instead of image

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
                 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
                 var height = (window.innerHeight > 0) ? window.innerHeight : screen.height;
                 var minWH = Math.min(width,height);
-                document.write("<IMG class=\"picture\" src=\"https://de.gravatar.com/userimage/83468112/3f30505c337c9dc4567e0ebad3edff59.jpg?size=" + minWH + "\" alt=\"Logo\">");
+                document.write("hallo");
             </script>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
