cordova & index.js

--- a/www/index.html
+++ b/www/index.html
@@ -38,5 +38,7 @@
                 document.write("<IMG class=\"picture\" src=\"https://de.gravatar.com/userimage/83468112/3f30505c337c9dc4567e0ebad3edff59.jpg?size=" + minWH + "\" alt=\"Logo\">");
             </script>
         </div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
